test/compiler/__snapshots__/errors.spec.ts.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`syntax errors > *1 1`] = `
"<input>:<R1>:0 (after line 100): error: Invalid unary operator
  *1
  ^"
`;

exports[`syntax errors > 1 $ 1 1`] = `
"<input>:<R1>:0 (after line 100): error: Invalid binary operator
  1 $ 1
  ^"
`;
